--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,55 @@
-// Graphical variables
-@import "config/fonts";
 @import "config/colors";
-@import "config/bootstrap_variables";
-
-// External libraries
-@import "bootstrap/scss/bootstrap";
+@import "config/fonts";
+@import "components/index";
 @import "font-awesome";
 
-// Your CSS partials
-@import "components/index";
-@import "pages/index";
+body {
+  margin: 0;
+  background-color: $blue;
+  height: 100vh;
+  width: 100vw;
+  &.no-scroll {
+    overflow: hidden;
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+h1 {
+  font-weight: 700;
+}
+
+h2 {
+}
+
+p {
+  font-weight: 400;
+}
+
+h3 {
+  font-weight: 500;
+}
+.footer {
+  display: flex;
+  justify-content: space-around;
+  width: 100vw;
+  box-sizing: border-box;
+  font-size: 0.7rem;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  padding: 0.2rem;
+  color: white;
+  z-index: -1;
+  @media (min-height: 720px) {
+    bottom: 2vh;
+  }
+}
