--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,3 +1,5 @@
 $blue: #335bef;
-$dark-blue: #163bbf;
+$blue: #ffffff;
+$dark-blue: #456024;
 $light-blue: #d8dcec;
+$white-container-image: url('#{asset_path("fond-ecran-brune.png")}');
