--- a/app/views/registrants/_registrant_popup.html.erb
+++ b/app/views/registrants/_registrant_popup.html.erb
@@ -1,9 +1,9 @@
 <div class="popup" data-form-target="popup">
-  <h3 class="title">Merci pour la force !</h3>
+  <h3 class="title">Merci pour l'inscription !</h3>
   <p>
-    Tu as du recevoir un mail de confirmation à <strong class="email"><%= registrant.email %></strong>,
-    nous te tiendrons au courant des actus.
+    On revient vers toi très bientôt <strong class="email"><%= registrant.email %></strong>
+    pour te tenir au courant des actus.
   </p>
-  <p>A très vite sur Compet' en Vill' ⏱</p>
+  <p>A très vite avec Tennis 4 Tomorrow</p>
   <p class="btn" data-action="click->form#hidePopup">Super</p>
 </div>
