--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,16 @@
-$blue: #335bef;
-$blue: #ffffff;
-$dark-blue: #456024;
+$blue: #e1e0d9;
+// $blue: #ffffff;
+$dark-blue: #c1cfa5;
 $light-blue: #d8dcec;
+$dark-green: #465e28;
 $white-container-image: url('#{asset_path("fond-ecran-brune.png")}');
+
+// $blue: #335BEF;
+// $dark-blue: #163BBF;
+// $light-blue: #d8dcec;
+// $white: #ffffff;
+// $black: #000000;
+
+// $light-green: #e1e0d9;
+// $green: #c1cfa5;
+// $light-blue: #d8dcec;
