--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -22,8 +22,8 @@
 // Define fonts for body and headers
 // $body-font: "Work Sans", "Helvetica", "sans-serif";
 // $headers-font: "Nunito", "Helvetica", "sans-serif";
-$body-font: "Montserrat", "Helvetica", sans-serif;
-$headers-font: "Aileron", "Helvetica", sans-serif;
+$montserrat: "Montserrat", "Helvetica", sans-serif;
+$aileron: "Aileron", "Helvetica", sans-serif;
 // To use a font file (.woff) uncomment following lines
 // @font-face {
 //   font-family: "Font Name";
