--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@ body {
   background-color: $blue;
   height: 100vh;
   width: 100vw;
+  font-family: $montserrat;
   &.no-scroll {
     overflow: hidden;
   }
