--- a/app/assets/stylesheets/components/_containers.scss
+++ b/app/assets/stylesheets/components/_containers.scss
@@ -58,8 +58,10 @@
 
       .title {
         z-index: 2;
+        font-family: $aileron;
         font-size: 1.4rem;
       }
+
       .desc {
         z-index: 2;
         font-size: 1rem;
@@ -157,7 +159,7 @@
     }
     .desc {
       color: $dark-green;
-
+      font-size: 0.9rem;
     }
     .form {
       display: flex;
@@ -208,7 +210,7 @@
       #submit {
         background-color: $dark-blue;
         color: $dark-green;
-        // border-radius: 3px;
+        border-radius: 3px;
         font-weight: 700;
         font-size: 1rem;
         display: flex;
@@ -216,6 +218,7 @@
         align-items: center;
         height: 40px;
         cursor: pointer;
+        border: none;
       }
     }
 
@@ -268,7 +271,6 @@ input:-webkit-autofill:active {
           font-size: 2rem;
 
         }
-
         .desc {
           font-size: 1.2rem;
         }
@@ -302,7 +304,7 @@ input:-webkit-autofill:active {
 
       }
       .desc {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
       }
     }
   }
