--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,8 +13,8 @@
       </p>
     </div>
     <div class="registants">
-      <h2 class="count" data-form-target="counter"><%= @registrants_count %> </h2>
-      <h3 class="text">inscrits</h3>
+      <h2 class="count" data-form-target="counter"><%= @registrants_count %> inscrits</h2>
+      <%# <h3 class="text">inscrits</h3> %>
     </div>
   </div>
   <div class="white-container">
