--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <div class="container" data-form-target="container" data-action="click->form#hidePopup">
+  <div class="bg"></div>
   <div class="blue-container">
     <div class="deco"></div>
     <div class="logo">
@@ -9,12 +10,12 @@
         Tennis 4 Tomorrow&nbsp;
       </h1>
       <p class="desc">
-        Tennis 4 Tomorrow : La Marque des Jeunes qui font le Tennis de Demain, Avec les 1ères raquettes Eco-frienly Stylées
+        La Marque des Jeunes qui font le Tennis de Demain<br> Avec les 1ères raquettes Eco-frienly Stylées
       </p>
     </div>
     <div class="registants">
-      <h2 class="count" data-form-target="counter"><%= @registrants_count %> inscrits</h2>
-      <%# <h3 class="text">inscrits</h3> %>
+      <h2 class="count" data-form-target="counter"><%= @registrants_count %></h2>
+      <h3 class="text"> inscrits</h3>
     </div>
   </div>
   <div class="white-container">
