--- a/app/views/registrants/_registrant_popup.html.erb
+++ b/app/views/registrants/_registrant_popup.html.erb
@@ -1,9 +1,10 @@
 <div class="popup" data-form-target="popup">
   <h3 class="title">Merci pour l'inscription !</h3>
   <p>
-    On revient vers toi très bientôt <strong class="email"><%= registrant.email %></strong>
-    pour te tenir au courant des actus.
+    On revient vers toi bientôt <strong class="email"><%= registrant.email %></strong>
+    🎾
   </p>
-  <p>A très vite avec Tennis 4 Tomorrow</p>
+  <p>A très vite pour la suite des aventures !</p>
+  <p>Carine</p>
   <p class="btn" data-action="click->form#hidePopup">Super</p>
 </div>
